--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/core": "^4.12.3",
     "firebase": "^8.8.0",
+    "react-flip-move": "^3.0.4",
     "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.3"
   }
